# anaso_lernas

./: Cargo.toml  README.md  index.html  styles.css
src/: app.rs  data.ron  main.rs  word_queue.rs
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: card.rs  full_square.rs  mod.rs  select_language.rs  vortaro.rs
src/components/challenge/: big_card.rs  mod.rs  select_image.rs  select_text.rs  spell_letters.rs
src/hooks/: mod.rs  use_shuffled_words.rs
