[package]
name = "anaso_lernas-ui"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version = "0.20", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
js-sys = "0.3"
implicit-clone = { version = "0.3.9", features = ["serde"] }
ron = "0.8.1"
lazy_static = "1.4.0"
rand = "0.8.5"
getrandom = { version = "0.2.11", features = ["js"] }

[workspace]
members = ["src-tauri"]
